--- a/Frontend/reactstore/src/components/ScrollBanner/ScrollBanner.css
+++ b/Frontend/reactstore/src/components/ScrollBanner/ScrollBanner.css
@@ -9,5 +9,5 @@
 
 .border-animation {
     animation: border-animation 3s infinite;
-    border: 4px solid; /* Set the initial border color to orange or indigo if you prefer */
+    border: 4px solid; 
 }
