--- a/Frontend/reactstore/src/index.css
+++ b/Frontend/reactstore/src/index.css
@@ -2,4 +2,58 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+.dashboard {
+    position: fixed; 
+    width: 100%; 
+    height: 50px; 
+    background-color: #333; 
+    color: white; 
+    z-index: 1000; 
+    top: 0; 
+    left: 0; 
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5); 
+}
 
+
+.content {
+    margin-top: 60px; 
+    padding: 20px;
+}
+
+
+#map {
+    height: 100%;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+
+.map-container {
+    height: 400px;
+}
+.header{
+    position: fixed;
+    left:0;
+    right:0;
+    top:0;
+    z-index: 1000;
+}
+.content {
+    padding-top: 75px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.contentB {
+    padding-top: 100px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
