--- a/Frontend/reactstore/src/tailwind.css
+++ b/Frontend/reactstore/src/tailwind.css
@@ -546,6 +546,7 @@ video {
 }
 
 body {
+  background-color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
